# eva-web

./: .babelrc  .editorconfig  .eslintrc.js  .gitignore  .travis.yml  1.c06bba7e0728e3d7fa79.js  1.c06bba7e0728e3d7fa79.js.map  2.1deebc776ab74d57bc9c.js  2.1deebc776ab74d57bc9c.js.map  2.2a6d68b8d271b1fd4701.js  2.2a6d68b8d271b1fd4701.js.map  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  deploy-on-netlify.sh  index.html  main.05e603a94434928b5dd9.js  main.05e603a94434928b5dd9.js.map  main.06074fa3edd9335a1a61.js  main.06074fa3edd9335a1a61.js.map  main.07142e79abe0921864a5.js  main.07142e79abe0921864a5.js.map  main.1ed70b8f6ccb3676ed6f.js  main.1ed70b8f6ccb3676ed6f.js.map  main.23d1a3d3087e091339b5.js  main.23d1a3d3087e091339b5.js.map  main.29b2a5e35d60e1912765.js  main.29b2a5e35d60e1912765.js.map  main.33f20b31263c3857e7b8.js  main.33f20b31263c3857e7b8.js.LICENSE.txt  main.33f20b31263c3857e7b8.js.map  main.4d84fd336167bff9a4a9.js  main.4d84fd336167bff9a4a9.js.map  main.5207e0b59b5d0c53d9ae.css  main.5207e0b59b5d0c53d9ae.css.map  main.542c8bb340499f808eb7.js  main.542c8bb340499f808eb7.js.map  main.5542f3a3d4c503398b70.css  (+46 more)
.github/: dependabot.yml
.github/workflows/: set-deployment-status.yml
backend/: .editorconfig  Cargo.toml  README.md
backend/src/: configuration.rs  console.rs  database.rs  error.rs  lib.rs  serde.rs
docs/: README.md  index.html  package-lock.json  package.json  webpack.config.js
docs/src/: App.vue  api.js  datetime.js  main.js  reset.sass
docs/src/components/: Schedule.vue  TaskAddForm.vue
src/: App.vue  api.js  api.ts  bus.js  database.js  datetime.js  error-500.js  main.js  main.rs  pouchdb.js  router.js  utils.js
src/assets/: colors.sass
src/components/: ColoredRadio.vue  Radio.vue  Schedule.vue  ScheduleEditableText.vue  TaskAddForm.vue  TimeSegmentPicker.vue  TimeSegmentPickerCell.vue  TimeSegments.vue
src/mixins/: ErrorHandling.js
test/unit/: .eslintrc.js  index.js  karma.conf.js
test/unit/specs/: api.spec.js  database.spec.js  datetime.spec.js
