[package]
name = "eva-web"
version = "0.0.1"
authors = ["Stijn Seghers <stijnseghers@gmail.com>"]

[dependencies]
error-chain = "0.10"
eva = { git = "https://github.com/Procrat/eva", branch = "web-integration" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[[bin]]
name = "eva"
path = "src/main.rs"
