[package]
name = "eva-web"
version = "0.1.0"
authors = ["Stijn Seghers <stijnseghers@gmail.com>"]
edition = "2018"

[lib]
name = "eva"
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
derive_more = { version = "0.99", default-features = false, features = ["from", "into"] }
failure = "0.1"
futures = "0.3"
js-sys = "0.3"
rand = { version = "0.7", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }

[dependencies.eva]
git = "https://github.com/Procrat/eva"
rev = "131b28d5fb918e2f041a7033c31d02736a3f2ca9"
default-features = false
