[package]
name = "eva-web"
version = "0.1.0"
authors = ["Stijn Seghers <stijnseghers@gmail.com>"]
edition = "2018"

[lib]
name = "eva"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["oldtime", "serde"] }
console_error_panic_hook = "0.1"
derive_more = { version = "0.99", default-features = false, features = ["from", "into"] }
failure = "0.1"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }

[dependencies.eva]
git = "https://github.com/Procrat/eva"
rev = "e1340e5024d47df79231eb9781daab066735f0f7"
default-features = false
